# OralExams

./: README.md  SETUP_VSCODE.md  VSCODE_QUICKSTART.md  demo  pyproject.toml  question_manager.py  test_system.py  tutoring_cli
docs/: architecture.md
examples/: enhanced_live_session.py  enhanced_simulated_turn.py  live_session.py  quickstart.py
oral_exams/: config.py  models.py  orchestrator.py  tutoring_interface
oral_exams/agents/: coaching.py  grounding.py  retrieval.py  safety.py  scoring.py  speech.py  vision.py  voice.py
oral_exams/resources/: knowledge_base.json
