[project]
name = "oral-exams"
version = "0.1.0"
description = "On-device tutor orchestration stack for statistics & regression"
authors = [{name = "OralExams Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "opencv-python>=4.8",
    "requests>=2.31",
    "scikit-learn>=1.3",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "vosk>=0.3.45",
]

[project.optional-dependencies]
live = [
    "rapidocr-onnxruntime>=1.3",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"oral_exams" = ["resources/*.json"]

